# Barybians-Desktop-Client

./: .gitignore  Barybians.pro  CMakeLists.txt  Data.cpp  Data.h  Dialog.qml  DialogForm.ui.qml  FirstPage.qml  Header.qml  LICENSE  MainWindow.qml  README.md  SecondPage.qml  TODO.md  loginwindow.cpp  loginwindow.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  namecontroller.cpp  namecontroller.h  qml.qrc  res.qrc  sqlite.db  userWindow.ui  userpage.cpp  userpage.h  webconnector.cpp  webconnector.h
cpp/: Data.cpp  FeedCard.cpp  FeedPage.cpp  PostsTableWidget.cpp  card.cpp  data.cpp  dialogwindow.cpp  drawercontroller.cpp  feedcard.cpp  feedlistmodel.cpp  feedpage.cpp  logincontroller.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  messagecard.cpp  navigationbar.cpp  userfeed.cpp  userpage.cpp  webconnector.cpp
cpp/models/: feedlistmodel.cpp  messagecard.cpp  navigationbar.cpp  userfeed.cpp
cpp/windows/: dialogwindow.cpp  feedpage.cpp  loginwindow.cpp  mainwindow.cpp  userpage.cpp
headers/: Data.h  FeedCard.h  PostsTableWidget.h  card.h  data.h  dialogwindow.h  drawercontroller.h  feedcard.h  feedlistmodel.h  feedpage.h  logincontroller.h  loginwindow.h  mainwindow.h  messagecard.h  navigationbar.h  userfeed.h  userpage.h  webconnector.h
headers/models/: feedlistmodel.h  userfeed.h
headers/windows/: dialogwindow.h  feedpage.h  loginwindow.h  mainwindow.h  userpage.h
